# Geno

./: .deployment  .gitignore  Bot.cs  CMakeLists.txt  Dockerfile  Geno.csproj  Geno.deps.json  Geno.runtimeconfig.dev.json  Geno.sln  LICENSE  Procfile  Program.cs  Startup.cs  app.py  application.yml  build.sh  config.json  config.py  global.json  main.py  pom.xml  requirements.txt  run.sh
Commands/: Elements.cs  Other.cs  Reactions.cs  Sdc.cs  Utils.cs  Wargaming.cs
Commands/Private/: Admin.cs  Genshin.cs  Images.cs  Reactions.cs
Database/: Database.csproj  DatabaseCache.cs  DatabaseProvider.cs  Extensions.cs  GuildDocument.cs
Database/Models/: BaseDocument.cs  GuildDocument.cs  UserDocument.cs
Database/Types/: Dailies.cs  GenshinIds.cs  GenshinRegion.cs
DemotivatorService/: DemotivatorGenerator.cs  DemotivatorService.csproj  Extensions.cs  TextData.cs
Errors/: ErrorResolver.cs  IErrorResolver.cs  SdcErrors.cs  UserLocales.cs  UtilsErrors.cs
Errors/Modules/: SdcErrors.cs  UtilsErrors.cs
Events/: ClientEvents.cs  Commands.cs  GuildEvents.cs
Geno/: .gitignore  Geno.csproj  Program.cs
Geno/Commands/: Genshin.cs  Images.cs  Other.cs  Sdc.cs  Settings.cs  Shikimori.cs  Utils.cs
Geno/Errors/: IErrorResolver.cs
Geno/Handlers/: ClientEvents.cs  CommandHandlingService.cs  GuildEvents.cs  SfwAutocompleteHandler.cs  ShikimoriAnimeAutocompleteHandler.cs  ShikimoriMangaAutocompleteHandler.cs
Geno/Responses/: Responser.cs
Geno/Utils/: Utils.cs
Geno/WaifuPicsApi/: WaifuClient.cs
Localization/: CommandsLocalizationManager.cs  JsonLocalizationManager.cs  Localization.csproj  LocalizationManager.cs  RefList.cs
Localization/Models/: Category.cs  Data.cs  Langs.cs  Row.cs
Localizations/: interactions.ru.json
Responses/: Responser.cs  SdcResponse.cs
Responses/Modules/: SdcResponse.cs
ShikimoriService/: ShikimoriClient.cs  ShikimoriService.csproj
Types/: GuildDocument.cs  InteractionResult.cs
Utils/: BotPermissions.cs  CommandHandlingService.cs  DbExtensions.cs  EmbedExtensions.cs  Extensions.cs  JsonLocalizationManager.cs  PrivateAttribute.cs  UserPermissions.cs  Utils.cs  WargamingExtensions.cs
Utils/Extensions/: EmbedExtensions.cs  Extensions.cs
WaifuPicsApi/: WaifuClient.cs  WaifuPicsApi.csproj
bot/: bot.py  client.py  models.py  utils.py
cogs/: events.py  moderation.py  music.py  other.py  system.py  tasks.py
commands/: CustomHelp.cs  Moderation.cs  Options.cs  Other.cs
discord/: __init__.py  __main__.py  abc.py  activity.py  appinfo.py  asset.py  audit_logs.py  calls.py  channel.py  client.py  colour.py  embeds.py  enums.py  errors.py  flags.py  gateway.py  guild.py  http.py  integrations.py  invite.py  iterators.py  member.py  mentions.py  message.py  object.py  oggparse.py  opus.py  partial_emoji.py  permissions.py  player.py  raw_models.py  reaction.py  relationship.py  role.py  shard.py  state.py  team.py  template.py  user.py  utils.py  (+3 more)
events/: Client.cs  Commands.cs  Guilds.cs  Members.cs
internal/: core.py  utils.py
netcoreapp31/: config.json
s/: application.yaml
src/: categories.cpp  main.cpp
utils/: Models.cs  Utils.cs
(+68 files in other folders)
